use --upgrade-pip to get a current pip

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@
 
 export DH_VIRTUALENV_INSTALL_ROOT=/opt/virtualenvs
 SNAKE=/usr/bin/python2
-EXTRA_REQUIREMENTS=--preinstall "setuptools>=17.1" --preinstall "pip>=8" --preinstall "wheel"
+EXTRA_REQUIREMENTS=--upgrade-pip --preinstall "setuptools>=17.1" --preinstall "wheel"
 NO_BINARY=cffi
 DH_VENV_ARGS=--with python-virtualenv --setuptools --python $(SNAKE) \
     --extra-pip-arg='--no-binary=$(NO_BINARY)' $(EXTRA_REQUIREMENTS) #-v
