--- a/systemd/sentry-web.service
+++ b/systemd/sentry-web.service
@@ -10,7 +10,7 @@ User=sentry
 Group=daemon
 WorkingDirectory=/var/opt/sentry
 EnvironmentFile=/etc/default/sentry
-ExecStart=/usr/bin/sentry run web
+ExecStart=/bin/bash -c ". /opt/virtualenvs/sentry/bin/activate && /usr/bin/sentry run web"
 
 [Install]
 WantedBy=multi-user.target
