--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Package: sentry
 Architecture: any
 Pre-Depends: dpkg (>= 1.16.1), python2.7, ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: redis-server, postgresql
 Description: A modern realtime error logging and aggregation platform.
     .
     The Sentry package fundamentally is just a simple server and web UI.
