added sentry-web launcher script

--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ build-arch:
 	cd debian && pip download --no-deps --no-binary :all: "sentry==$(VERSION)"
 	mkdir -p $(SDIST_DIR)
 	tar -xz -C $(SDIST_DIR) --strip-components=1 --exclude '*.egg-info' -f debian/sentry-$(VERSION).tar.gz
-	cp -rp etc systemd $(SDIST_DIR)
+	cp -rp etc scripts systemd $(SDIST_DIR)
 	chmod -R o= $(SDIST_DIR)/etc
 	dh $@ $(DH_VENV_ARGS) --sourcedir $(SDIST_DIR)
 
