--- a/systemd/sentry-worker.service
+++ b/systemd/sentry-worker.service
@@ -8,7 +8,7 @@ User=sentry
 Group=daemon
 WorkingDirectory=/var/opt/sentry
 EnvironmentFile=/etc/default/sentry
-ExecStart=/usr/bin/sentry run worker -l "$SENTRY_LOGLEVEL_WORKER"
+ExecStart=/usr/sbin/sentry-worker
 
 [Install]
 WantedBy=multi-user.target
