--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), python, dh-virtualenv (>= 1.0),
     libxml2-dev, libxslt1-dev, libyaml-dev, libjpeg-dev, libpq-dev,
     libldap2-dev, libsasl2-dev
 Standards-Version: 3.9.5
-Homepage: https://sentry.io/
+Homepage: https://github.com/1and1/debianized-sentry#sentry-debian-packaging
 
 Package: sentry
 Architecture: any
