--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,8 @@ Build-Depends: debhelper (>= 9), python, dh-virtualenv (>= 1.0),
     libldap2-dev, libsasl2-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/1and1/debianized-sentry#sentry-debian-packaging
+#Vcs-Git: https://github.com/1and1/debianized-sentry.git
+#Vcs-Browser: https://github.com/1and1/debianized-sentry
 
 Package: sentry
 Architecture: any
