--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: sentry
+Source: sentry.io
 Section: contrib/python
 Priority: extra
 Maintainer: Juergen Hermann <jh@web.de>
@@ -6,16 +6,19 @@ Build-Depends: debhelper (>= 9), python, dh-virtualenv (>= 1.0),
     curl, tar, gzip, lsb-release, clang, cmake (>=3.4.3),
     python-setuptools, python-pip, python-dev, libffi-dev,
     libxml2-dev, libxslt1-dev, libyaml-dev, libjpeg-dev, libpq-dev,
-    libldap2-dev, libsasl2-dev
+    libldap2-dev, libsasl2-dev, zlib1g-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/1and1/debianized-sentry#sentry-debian-packaging
 #Vcs-Git: https://github.com/1and1/debianized-sentry.git
 #Vcs-Browser: https://github.com/1and1/debianized-sentry
 
-Package: sentry
+Package: sentry.io
 Architecture: any
 Pre-Depends: dpkg (>= 1.16.1), python2.7, ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Provides: sentry
+Replaces: sentry (>= 8.13.0~), sentry (<< 8.22.0~)
+Conflicts: sentry (>= 8.13.0~), sentry (<< 8.22.0~)
 Recommends: redis-server, postgresql
 Description: A modern realtime error logging and aggregation platform.
     .
