--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,8 @@ EXTRA_REQUIREMENTS=--upgrade-pip --preinstall "setuptools>=17.1" --preinstall "w
 
 PACKAGE=$(shell dh_listpackages)
 VERSION=$(shell parsechangelog | grep ^Version: | sed -re 's/[^0-9]+([^-]+).*/\1/')
-DH_VENV_ARGS=--with python-virtualenv --setuptools --python $(SNAKE) $(EXTRA_REQUIREMENTS) # -v
+DH_VENV_ARGS=--with python-virtualenv --setuptools --install-suffix sentry \
+             --python $(SNAKE) $(EXTRA_REQUIREMENTS) # -v
 
 
 %:
