--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), python, dh-virtualenv (>= 1.0),
     libxml2-dev, libxslt1-dev, libyaml-dev, libjpeg-dev, libpq-dev,
     libldap2-dev, libsasl2-dev, zlib1g-dev
 Standards-Version: 3.9.5
-Homepage: https://github.com/1and1/debianized-sentry#sentry-debian-packaging
+Homepage: https://github.com/1and1/debianized-sentry#sentryio-debian-packaging
 #Vcs-Git: https://github.com/1and1/debianized-sentry.git
 #Vcs-Browser: https://github.com/1and1/debianized-sentry
 
