--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,6 +13,6 @@ prune debian/sentry.io
 recursive-include etc *
 recursive-include scripts *
 recursive-include systemd *.service
-recursive-include docs/_static/img *.png *.svg *.graphml
+recursive-include docs/_static/img *.md *.png *.svg *.graphml
 
 global-exclude *~ *.swp *debhelper* *.substvars files
