--- a/systemd/sentry-cron.service
+++ b/systemd/sentry-cron.service
@@ -1,5 +1,8 @@
 [Unit]
 Description=Sentry Cron Service
+Documentation=https://sentry.io/
+Documentation=https://docs.sentry.io/server/cli/run/cron/
+Documentation=https://github.com/1and1/debianized-sentry#sentryio-debian-packaging
 After=network.target
 
 [Service]
