--- a/systemd/sentry-web.service
+++ b/systemd/sentry-web.service
@@ -1,5 +1,8 @@
 [Unit]
 Description=Sentry Web Service
+Documentation=https://sentry.io/
+Documentation=https://docs.sentry.io/quickstart/
+Documentation=https://github.com/1and1/debianized-sentry#sentryio-debian-packaging
 After=network.target
 Requires=sentry-worker.service
 Requires=sentry-cron.service
