--- a/systemd/sentry-cron.service
+++ b/systemd/sentry-cron.service
@@ -3,7 +3,7 @@ Description=Sentry Cron Service
 Documentation=https://sentry.io/
 Documentation=https://docs.sentry.io/server/cli/run/cron/
 Documentation=https://github.com/1and1/debianized-sentry#sentryio-debian-packaging
-After=network.target
+After=syslog.target network.target
 
 [Service]
 Type=simple
