--- a/systemd/sentry-worker.service
+++ b/systemd/sentry-worker.service
@@ -3,7 +3,7 @@ Description=Sentry Background Worker
 Documentation=https://sentry.io/
 Documentation=https://docs.sentry.io/server/queue/
 Documentation=https://github.com/1and1/debianized-sentry#sentryio-debian-packaging
-After=network.target
+After=syslog.target network.target
 
 [Service]
 Type=simple
